crates/mwlc/tests/snapshots/benchmarks__recursion.snap
---
source: crates/mwlc/tests/benchmarks.rs
expression: table(RECURSION)
---
# commands per call, callees included, counting every guard as taken.
# '+' means the number is one pass: a loop, a recursive call or an
# 'execute as' over several entities repeats part of it, and how often
# depends on the data.
# maxCommandChainLength is 65536 per tick by default; over it, Minecraft stops
# the chain without saying so.

bench:fib       39 +
bench:fib/if_0  3
bench:tick      44 +
